# AI-Chatbot-Framework

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: architecture.md
examples/: curl_requests.md
src/ai_chatbot/: app.py  engine.py  handoff.py  tools.py
tests/: test_engine.py  test_handoff.py
